--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,25 @@ img {
   height: auto;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;  
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .container {
-  width:290px;
-  padding-right: 15px;
-  padding-left: 15px;
+  width:320px;
+  padding-right: 16px;
+  padding-left: 16px;
   margin:0 auto;
+  box-sizing: border-box;
 }
 
 /* *Header */
@@ -133,7 +147,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-position: center;  
   background-repeat: no-repeat;
   background-size: cover;
-  
 }
 
 .hero-container{
@@ -145,7 +158,6 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-bottom: 96px;
 }
 .qualities-wrap {
-  
 }
 .qualities-list {
   display: flex;
@@ -180,10 +192,10 @@ color: #434455;
   padding-bottom: 96px;
 }
 .team-container{
-  width: 264px;
-  padding-left: 28px;
-  padding-right: 28px;
-  margin:0 auto;
+  /* width: 264px;
+  margin:0 auto; */
+padding-right: 28px;
+padding-left: 28px;
 }
 .team-title {
 font-weight: 700;
@@ -246,8 +258,14 @@ margin-bottom: 72px;
 /* *Media */
 @media screen and (min-width:768px){
 .container{
-  width: 738px;
+  width: 768px;
 }
+/* Header */
+.header{
+  padding-top: 24px;
+  padding-bottom: 24px;
+}
+
 /* Hero */
 .hero-wrap{
   background:linear-gradient( rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office-tab.jpg);
@@ -261,6 +279,7 @@ margin-bottom: 72px;
   line-height: 1.07;
 }
 .hero-container{
+  
 }
 /* Qualities */
 .qualities-list{
@@ -273,36 +292,36 @@ margin-bottom: 72px;
   text-align: start;
 }
 /* Team */
+.team{
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
 .team-container{
-  width: 552px;
-  padding-left: 108px;
+  /* width: 552px;
+  margin:0 auto; */
   padding-right: 108px;
-  margin:0 auto;
+  padding-left: 108px;
 }
 .team-item{
   width: calc((100% - 24px) / 2);
 }
 .team-list{
-  gap: 24px;
+  row-gap: 64px;
+  column-gap: 24px;
 }
 }
 @media screen and (min-width:1158px){
   .container{
-    width: 1128px;
+    width: 1158px;
   }
 
   /* Header */
-  .header{
-    padding-top: 0;
-    padding-bottom: 0;
-  }
   .header-menu-icon{
     display: none;
   }
+
   .header-container{
     justify-content:center;
-    padding-top: 24px;
-    padding-bottom: 24px;
   }
   .header-logo{
     margin-right: 76px;
@@ -348,7 +367,7 @@ margin-bottom: 72px;
       height: 4px;
       position:absolute;
       left: 0;
-      bottom: -20px;
+      bottom: -24px;
       background: #404bbf;
       border-radius: 2px;
     }
@@ -395,9 +414,13 @@ margin-bottom: 72px;
       gap: 24px;
     }
     /* Team */
+    .team{
+      padding-top: 117px;
+      padding-bottom: 123px;
+    }
     .team-container{
-      width: 1128px;
-      padding: 120px 15px 120px 15px;
+      padding-left: 16px;
+      padding-right: 16px;
     }
     .team-list{
       gap: 24px;
@@ -414,14 +437,11 @@ margin-bottom: 72px;
 }
 @media (min-width:768px) and (max-width:1157px){
   .container{
-    width: 738px;
+    width: 768px;
   }
   .header{
-    padding: 0;
   }
   .header-container{
-    padding-top: 24px;
-    padding-bottom: 24px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -473,7 +493,7 @@ margin-bottom: 72px;
       height: 4px;
       position:absolute;
       left: 0;
-      bottom: -30px;
+      bottom: -24px;
       background: #404bbf;
       border-radius: 2px;
     }
