--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* *General styles */
 body{
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -73,6 +74,13 @@ text-align: center;
 color: #2e2f42;
 }
 
+.general-container{
+  margin-bottom: 72px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+}
 /* *Header */
 .header {
   padding-top: 16px;
@@ -94,12 +102,12 @@ font-size: 18px;
 line-height: 1.17;
 letter-spacing: 0.03em;
 text-transform: uppercase;
-color: #4d5ae5;
+color: #2e2f42;
 /* flex-grow: 1; */
 }
 
-.studio{
-  color: #2e2f42;
+.web{
+  color: #4d5ae5;
 }
 
 .header-svg{
@@ -134,17 +142,9 @@ box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 background-color: #4d5ae5;
 min-width: 169px;
 margin: auto;
-border: none;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+border: none; 
 }
 
-.hero-button:hover {
-  background: #404bbf;
-  }
-
-.hero-button:focus {
-  background: #404bbf
-  }
 
 .hero-wrap{
   display: flex;
@@ -258,15 +258,8 @@ margin-bottom: 72px;
   width: 40px;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.team-iconlist-link:hover{
-  background-color:  #404bbf;
 }
 
-.team-iconlist-link:focus{
-  background-color:  #404bbf;
-}
 .team-list-icon {
   fill: #f4f4fd;
 }
@@ -318,6 +311,382 @@ color: #434455;
   gap: 8px;
 }
 
+/* *Footer */
+.footer{
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+.footer-logo{
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #f4f4fd;
+}
+
+.footer{
+  background: #2e2f42;
+}
+
+.footer-list{
+  display: flex;
+  gap: 16px;
+}
+
+.footer-list-item{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #4d5ae5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-svg{
+  fill: #f4f4fd;
+}
+
+.social-media-header{
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.footer-text{
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+}
+
+.form-header{
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #fff;
+}
+
+.footer-input{
+  position: relative;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 288px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  opacity: 0.3;
+  background: transparent;
+  padding-left: 16px;
+  padding-bottom: 8px;
+  padding-top: 8px;
+  outline: transparent;
+  color: #fff;
+}
+
+.footer-input::placeholder{
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.footer-label{
+  margin-bottom: 16px;
+}
+
+.form-container{
+  margin-bottom: 0;
+}
+
+.footer-button{
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  background: #4d5ae5;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 16px;
+  border: none;
+}
+
+.footer-button-icon{
+  fill: #fff;
+}
+
+.footer-form{
+display: flex;
+flex-direction: column;
+align-items: center;
+}
+
+/* *Backdrop */
+.backdrop{
+  position:fixed;
+  top:0;
+  width:100%;
+  height:100%;
+  background: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-icon{
+  box-sizing: border-box;
+  border-radius: 4px;
+  /* width: 408px; */
+  min-width: 288px;
+  /* min-height: 584px; */
+  min-height: 623px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  position: absolute;
+  /* top:50%;
+  left: 50%;
+  transform: translate(-50%, -50%); */
+  /* padding:72px 24px 24px 24px; */
+  top: 1.25%;
+  bottom: 1.25%;
+  left: 5%;
+  right: 5%;
+  padding:72px 16px 24px 16px;
+  display: flex;
+  flex-direction: column;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .input{
+  box-sizing: border-box;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  border-radius: 4px;
+  /* width: 360px; */
+  width: 256px;
+  height: 40px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .input:focus{
+    border: 1px solid #4d5ae5;
+  }
+  
+  .input:focus + .icon-for-input{
+    fill: #4d5ae5;
+  }
+  
+  .input + .icon-for-input{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .label{
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+  display: block;
+  max-width: 256px;
+  }
+  
+  .label-checkbox{
+    /* display: flex; */
+    /* align-items: center; */
+  }
+  
+  .checkbox{
+    width: 16px;
+    height: 16px;
+  }
+  
+  .checkbox-container{
+    /* display: flex; */
+    margin-bottom: 24px;
+  }
+  
+  .checkbox:checked + .label-checkbox .checkbox-span{
+  background: #404bbf;
+  fill: #f4f4fd;
+  border: none;
+  }
+  
+  .checkbox-span{
+    box-sizing: border-box;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    padding: 4px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .checkbox-link{
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+  }
+  
+  .backdrop-header{
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  /* margin-bottom: 16px; */
+  max-width: 256px;
+  margin:0 auto;
+  }
+  
+  .backdrop-button{
+    border-radius: 4px;
+  padding: 16px 32px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  border: none;
+  cursor: pointer;
+  background: #4d5ae5;
+  /* position: absolute;
+  left: 50%;
+  transform: translateX(-50%); */
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #fff;
+  display: block;
+  margin: 0 auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .backdrop-button:hover{
+    background: #404bbf;
+  }
+  
+  .backdrop-icon{
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1); 
+  cursor: pointer;
+  padding: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  }
+  
+  .backdrop-icon:hover{
+    background-color: #404bbf;
+    border: none;
+  }
+  
+  .backdrop-icon:focus{
+    background-color: #404bbf;
+    border: none;
+  }
+  
+  .backdrop-icon-svg{
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  
+  .backdrop-icon:hover .backdrop-icon-svg{
+    fill: #ffffff
+  }
+  
+  .backdrop-icon:focus .backdrop-icon-svg{
+    fill: #ffffff
+  }
+  
+  .input-container{
+    position: relative;
+  }
+  
+  .icon-for-input{
+    position: absolute;
+    left:16px;
+    top:50%;
+    transform: translateY(-50%);
+  }
+  
+  .textarea{
+    box-sizing: border-box;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    outline: transparent;
+    border-radius: 4px;
+    width: 256px;
+    height: 120px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    padding: 8px 16px;
+    resize: none;
+    transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .textarea:focus{
+    border: 1px solid #4d5ae5;
+  }
+  
+  .comment-container{
+    position: relative;
+    margin-bottom: 16px;
+  }
+  
+  .textarea::placeholder{
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  position: absolute;
+  left: 16px;
+  top: 8px;
+  }
+  
+  .margin-for-input{
+    margin-bottom: 8px;
+  }
+  .is-open{
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+  }
+  .form{
+    margin:0 auto;
+  }
+  .form-and-title{
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
 /* *Media */
 @media screen and (min-width:768px){
 .container{
@@ -390,6 +759,65 @@ color: #434455;
 }
 .portfolio-list-item{
   width: calc((100% - 24px) / 2);
+}
+/* Footer */
+.footer-container{
+  padding-left: 108px;
+  padding-right: 164px;
+}
+.text-media-container{
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.footer-text{
+  max-width: 264px;
+}
+.footer-text-container{
+  align-items: flex-start;
+}
+.social-media-container{
+  align-items: flex-start;
+}
+.footer-form{
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  margin-right: auto;
+}
+.form-container{
+  
+}
+.footer-label{
+  margin-bottom: 0;
+}
+.form-header{
+  margin-right: auto;
+}
+.footer-input{
+  width: 264px;
+}
+/* *Backdrop */
+.modal-icon{
+  padding-left: 24px;
+  padding-right: 24px;
+  width: 408px;
+  min-height: 584px;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 9.4%;
+}
+.input{
+  width:360px;
+}
+.textarea{
+  width:360px;
+}
+.backdrop-header{
+  max-width: 360px;
+}
+.label{
+  max-width: 360px;
 }
 }
 @media screen and (min-width:1158px){
@@ -491,6 +919,16 @@ color: #434455;
       font-size: 56px;
       line-height: 1.07;
     }
+    .hero-button{
+      transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .hero-button:hover {
+      background: #404bbf;
+      }
+    
+    .hero-button:focus {
+      background: #404bbf
+      }
     /* Qualities */
     .qualities-list-icon{
       fill: transparent;
@@ -522,6 +960,15 @@ color: #434455;
     .team-item{
       width: calc((100% - 24px*3) / 4 );
     }
+    .team-iconlist-link{
+      transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .team-iconlist-link:hover{
+      background-color:  #404bbf;
+    }
+    .team-iconlist-link:focus{
+      background-color:  #404bbf;
+    }
     /* Portfolio */
     .portfolio-list{
       gap: 48px 24px;
@@ -552,6 +999,55 @@ color: #434455;
     }
     .portfolio-list-item:hover .portfolio-overlay-text{
       transform: translateY(0);
+    }
+    /* Footer */
+    .footer-container{
+      display: flex;
+      padding-left:16px;
+      padding-right:16px;
+      justify-content: center;
+    }
+    .footer-text-container{
+      margin-right: 120px;
+    }
+    .footer-logo{
+      margin-right: auto;
+    }
+    .text-media-container{
+      gap: 0;
+    }
+    .social-media-container{
+      margin-right: 80px;
+    }
+    .footer-button{
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-button:hover{
+      background-color: #404bbf;
+    }
+    
+    .footer-button:focus{
+      background-color: #404bbf;
+    }
+    .footer-input{
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    .footer-input:hover{
+      border-color: #4d5ae5;;
+    }
+    
+    .footer-input:focus{
+      border-color: #4d5ae5;;
+    }
+    .footer-list-item{
+      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      cursor: pointer;
+    }
+    .footer-list-item:hover{
+      background-color:  #404bbf;
+    }
+    .footer-list-item:focus{
+      background-color:  #404bbf;
     }
 }
 
