--- a/css/style.css
+++ b/css/style.css
@@ -445,17 +445,11 @@ align-items: center;
 .modal-icon{
   box-sizing: border-box;
   border-radius: 4px;
-  /* width: 408px; */
   min-width: 288px;
-  /* min-height: 584px; */
   min-height: 623px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
   position: absolute;
-  /* top:50%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  /* padding:72px 24px 24px 24px; */
   top: 1.25%;
   bottom: 1.25%;
   left: 5%;
@@ -471,7 +465,6 @@ align-items: center;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   border-radius: 4px;
-  /* width: 360px; */
   width: 256px;
   height: 40px;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1048,6 +1041,21 @@ align-items: center;
     }
     .footer-list-item:focus{
       background-color:  #404bbf;
+    }
+    /*Backdrop */
+    .modal-icon{
+      top:50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      padding:72px 24px 24px 24px;
+      width: 408px;
+      min-height: 584px;
+    }
+    .input{
+      width: 360px;
+    }
+    .textarea{
+      width: 360px;
     }
 }
 
