--- a/css/style.css
+++ b/css/style.css
@@ -714,11 +714,13 @@ align-items: center;
 
 /* Hero */
 .hero-wrap{
-  max-height: 436px;
   background:linear-gradient( rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/Dark-bg_tab.jpg);
   margin:0 auto;
   padding-top: 112px;
   padding-bottom: 126px;
+  background-position: center;  
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -734,9 +736,11 @@ align-items: center;
 }
 
 .title{
-  max-width:496px;
+  /* max-width:496px; */
+  max-width: 526px;
   font-size: 56px;
   line-height: 1.07;
+  margin-bottom: 36px;
 }
 .hero-container{
   
@@ -916,6 +920,9 @@ align-items: center;
       margin:0 auto;
       padding-top: 188px;
       padding-bottom: 188px;
+      background-position: center;  
+      background-repeat: no-repeat;
+      background-size: cover;
     }
 
     @media screen and (-webkit-min-device-pixel-ratio: 2),
@@ -930,9 +937,11 @@ align-items: center;
   }
 }
     .title{
-      max-width:496px;
+      /* max-width:496px; */
+      max-width: 526px;
       font-size: 56px;
       line-height: 1.07;
+      margin-bottom: 48px;
     }
     .hero-button{
       transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
