--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,83 @@ color: #2e2f42;
 }
 .header-menu-icon {
 }
+/* Mob-menu */
 .mob-menu{
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 24px 24px 40px 16px;
+  opacity: 0;
+  pointer-events: none;
   visibility: hidden;
 }
 
+.menu-navigation-list{
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+.navigation-link{
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+}
+.navigation-link-colored{
+  color: #404bbf;
+}
+
+.mob-menu-button{
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  fill: #e7e9fc;
+  border-width: 1px;
+  border-color: #2e2f42;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-bottom: 24px;
+}
+.menu-close-svg{
+  fill: #2e2f42;
+}
+.contact-link{
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.contact-link-colored{
+  color: #4d5ae5;
+}
+.socmedia-list-item{
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+}
+.menu-socmedia-list{
+  display: flex;
+  gap: 40px;
+}
+.menu-contact-list{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  margin-bottom: 48px;
+}
 /* *Hero */
 .title{
   font-weight: 700;
@@ -205,7 +278,6 @@ margin-bottom: 8px;
 font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
-color: #434455;
 }
 
 /* *Team */
@@ -302,7 +374,6 @@ color: #2e2f42;
 line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: center;
-color: #434455;
 }
 
 .list-text-container{
@@ -747,7 +818,7 @@ align-items: center;
 }
 /* Qualities */
 .qualities-list{
-  row-gap: 24px;
+  column-gap: 24px;
 }
 .qualities-list-item{
   width: calc((100% - 24px) / 2);
@@ -872,7 +943,7 @@ align-items: center;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    display: block;
+    /* display: block; */
     }
   .navigation-list-item:hover {
     color: #404bbf;
@@ -903,7 +974,6 @@ align-items: center;
   .addsress-list-item{
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#434455;
     align-items: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
@@ -962,6 +1032,7 @@ align-items: center;
       border-radius: 4px;
       padding: 24px 100px;
       background: #f4f4fd;
+      margin-bottom: 8px;
     }
     .qualities-list-item{
       width: calc((100% - 3*24px) / 4);
@@ -1161,7 +1232,6 @@ align-items: center;
     line-height: 1.17;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color:#434455;
     /* align-items: center; */
     }
   .addsress-list-item:hover{
