--- a/css/style.css
+++ b/css/style.css
@@ -412,7 +412,7 @@ text-align: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background: #4d5ae5;
+  background-color: #4d5ae5;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1135,13 +1135,13 @@ align-items: center;
       border-color: #4d5ae5;;
     }
     .footer-list-item{
-      transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     .footer-list-item:hover{
-      background-color:  #404bbf;
+      background-color:#31d0aa;
     }
     .footer-list-item:focus{
-      background-color:  #404bbf;
+      background-color:#31d0aa;
     }
     /*Backdrop */
     .modal-icon{
