--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ color: #2e2f42;
   width: 24px;
   height: 24px;
   border-radius: 100%;
-  fill: #e7e9fc;
+  background-color: #e7e9fc;
   border-width: 1px;
   border-color: #2e2f42;
   display: flex;
@@ -159,10 +159,9 @@ color: #2e2f42;
   align-items: center;
   margin-left: auto;
   margin-bottom: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.menu-close-svg{
-  fill: #2e2f42;
-}
+
 .contact-link{
   font-weight: 500;
   font-size: 20px;
@@ -983,6 +982,10 @@ align-items: center;
     
   .addsress-list-item:focus{
     color: #404bbf;
+    }
+    /* Mob-menu */
+    .mob-menu{
+      display: none;
     }
     /* Hero */
     .hero-wrap{
